# merged-order-book

./: Cargo.toml  README.md
.github/workflows/: ci.yml
grpc/: Cargo.toml
grpc/src/: binance.rs  bitstamp.rs  main.rs  merger.rs
protos/: Cargo.toml
protos/proto/: service.proto
protos/src/: lib.rs
src/: lib.rs  main.rs  merger.rs
tests/: grpc.rs
tests/util/: binance.rs  bitstamp.rs  mod.rs
web-ui/: Cargo.toml
web-ui/src/: index.html  main.rs
