[package]
name = "merged-order-book"
version = "0.1.0"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
publish = false

[dev-dependencies]
merged-order-book-grpc = { path = "grpc" }
merged-order-book-protos = { path = "protos" }

axum = { version = "0.6.3", features = ["ws"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
approx = "0.5.1"

[workspace]
members = ["grpc", "protos"]
