[package]
name = "merged-order-book"
version = "0.1.0"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
merged-order-book-protos = { path = "protos" }

anyhow = "1.0.68"
futures-util = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-native-roots"] }
tonic = "0.8.3"
tokio-stream = { version = "0.1.11", features = ["sync"] }

[dev-dependencies]
approx = "0.5.1"
axum = { version = "0.6.3", features = ["ws"] }
serde_json = "1.0.91"

[workspace]
